2011-05-13	Stephan Linz <linz@li-pro.net>

	* xlbsp: migrate to ptxdist-2011.05.0: mv xlbsp to platforms/xlbsp

2011-01-25	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to linux-2.6.31.13 with s2imac support
	* xlbsp: new simple memory bank (plbv46_mbref_mio)

2011-01-16	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2010.12
	* platform: show device tree under /proc/device-tree
	* xlbsp: new simple register bank (plbv46_mbref_reg)
	* xlbsp: use kernel boot parameter mtdparts for MTD physical map

2011-01-12	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-SP3ADSP1800-MMU-full-12.4
