@@ -290,7 +290,7 @@ define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
 # System memory is mpmc_0
 define_hex CONFIG_XILINX_ERAM_START 0x20000000
-define_hex CONFIG_XILINX_ERAM_SIZE 0x00000000
+define_hex CONFIG_XILINX_ERAM_SIZE 0x08000000
 
 # NOR Flash memory is xps_mch_emc_0
 define_hex CONFIG_XILINX_FLASH_START 0xaf000000
