@@ -1,3 +1,7 @@
+2011-05-14	Stephan Linz <linz@li-pro.net>
+
+	* xlbsp: change eram size to real size
+
 2011-05-13	Stephan Linz <linz@li-pro.net>
 
 	* xlbsp: migrate to ptxdist-2011.05.0: mv xlbsp to platforms/xlbsp
